# Copyboards

./: .eslintrc.js  .eslintrc.ts  .gitignore  .lintstagedrc.js  CONTRIBUTING.md  README.md  TRADEMARK.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  help_wanted.md
.github/workflows/: main.yml  release.yml
Copyboards/: ContentView.swift  CopyboardsApp.swift  Persistence.swift
Copyboards.xcodeproj/: project.pbxproj
Copyboards/Copyboards.xcdatamodeld/: .xccurrentversion
CopyboardsTests/: CopyboardsTests.swift
CopyboardsUITests/: CopyboardsUITests.swift  CopyboardsUITestsLaunchTests.swift
electron/main/: app-window.ts  index.ts
electron/preload/: index.ts
scripts/: build.base.config.js  build.config.js  build.js  build.lite.config.js  dev.install.js  dev.js  rollup.config.js  util.js  vite.config.js
scripts/plugins/: rollup.assets.plugin.js  rollup.devtool.plugin.js  rollup.esbuild.plugin.js  rollup.preload.plugin.js  util.js  (+4 more)
src/: App.vue  app-info.ts  electron-env.d.ts  main.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: API.md  app_state.rs  clipboard_manager.rs  clipboard_watcher.rs  commands.rs  lib.rs  main.rs
src-tauri/src/clipboard_manager/: database.rs  mod.rs  models.rs
src-tauri/src/clipboard_manager/database/: color_operations.rs  image_operations.rs  item_operations.rs  mod.rs  text_operations.rs
src-tauri/src/content/: color.rs  image.rs  mod.rs  text.rs
src-tauri/src/utils/: color_utils.rs  image_utils.rs  mod.rs
(+126 files in other folders)
