[package]
name = "copyboards"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
arboard = "3.2"
base64 = "0.13.0"
image = "0.24.6"
uuid = { version = "1.3.0", features = ["v4"] }
sha2 = "0.10.6"
regex = "1.5.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
